Practica/zot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zot-service
spec:
  selector:
    app: zot-pod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
